@@ -150,6 +150,8 @@ ctags-exuberant|Exuberant Ctags|ctags by Darren Hiebert:\
 #	suffix for compressed html file. By default, 'ghtml'.
 # script_alias:
 #	specified -s option then use this value as script alias.
+# show_position:
+#	show position per function definition. (false by default.)
 #
 #---------------------------------------------------------------------
 htags:\
